# test-gcs-to-bq-per-minute

./: .gitignore  README.md
functions/streaming/: main.py
generator/: pyproject.toml
generator/generator/: generator.py  main.py
schema/: schema_dcs.json  schema_quality.json  schema_spectral.json
